--- a/mallardmania.html
+++ b/mallardmania.html
@@ -56,11 +56,13 @@
             <div class="page-header" style="height: 80px;">
             </div>
             <div class="bs-component">
-                <div class="jumbotron">
+                <div id="jumbo" class="jumbotron">
+                <h3 id="loading" style="color:Red;padding-left:47%;">Loading...</h3> 
                     <canvas id="myCanvas"></canvas>
                 </div>
             </div>
         </div>
     </div>
+
 </body>
 </html>
