--- a/mallardmania.html
+++ b/mallardmania.html
@@ -34,6 +34,9 @@
                         <li>
                             <a href="http://www.joesshed.com/index.html#contact" target="_blank">Contact</a>
                         </li>
+                        <li>
+                            <a href="https://github.com/joeyjoeuk/MallardMania#mallard-mania" target="_blank">About</a>
+                        </li>
                     </ul>
                 </div>
             </div>
